--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = xrsrke
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
+requirements = 1.17
+# dev_requirements =
 # console_scripts =
