--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = xrsrke
 
 ### Optional ###
-requirements = 1.17
+requirements = torch einops torchtyping pandas scipy
 # dev_requirements =
 # console_scripts =
