--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -3,3 +3,25 @@ dataset:
   n_trials: 27
   n_steps: 201
   n_channels: 192
+
+train:
+  epochs: 2
+  batch_size: 2
+
+  checkpoint_interval: 1000
+  eval_interval: 100
+
+  seed: 42
+
+optimizer:
+  name: "adamw"
+  kwargs:
+    lr: 5.0e-5
+    betas: [0.9, 0.95]
+    eps: 1.0e-8
+    weight_decay: 1.0e-6
+
+scheduler:
+  name: "cosine_annealing"
+  kwargs:
+    eta_min: 5.0e-5
