fix the range of chracter probability in the forward pass of RNN

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = xrsrke
 
 ### Optional ###
-requirements = torch einops torchtyping transformers pytorch-lightning pandas scipy
+requirements = torch einops torchtyping transformers pytorch-lightning pandas scipy matplotlib
 # dev_requirements =
 # console_scripts =
